--- a/argocd/app-of-apps.yaml
+++ b/argocd/app-of-apps.yaml
@@ -21,7 +21,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: app-of-apps
-  namespace: argocd
+  namespace: argocd-sit
 spec:
   project: default
   source:
@@ -30,7 +30,7 @@ spec:
     path: argocd/applications
   destination:
     server: https://kubernetes.default.svc
-    namespace: argocd
+    namespace: argocd-sit
   syncPolicy:
     automated:
       prune: true
