refactor: 整合ArgoCD配置文件并优化RBAC权限
- 将argocd-install.yaml、argocd-full-rbac.yaml整合到app-of-apps.yaml
- 使用生产级最小权限RBAC配置，替代过度权限
- 移除密码配置，使用ArgoCD随机密码生成
- 统一使用argocd-sit命名空间，确保SIT环境隔离
- 简化部署流程，单文件完成所有ArgoCD配置

--- a/argocd/app-of-apps.yaml
+++ b/argocd/app-of-apps.yaml
@@ -1,32 +1,97 @@
 # ============================================================
-# SIT 环境 App of Apps 配置
+# SIT 环境 ArgoCD 完整部署配置
 # ============================================================
 # 
 # 📝 学习说明:
-# 这是 SIT 环境的 App of Apps 模式配置
-# 管理 SIT 环境的所有应用，通过分支实现环境隔离
+# 这是 SIT 环境的完整 ArgoCD 部署配置文件
+# 包含命名空间、RBAC权限、ArgoCD实例和App of Apps应用
 #
 # 🔧 配置特点:
-# - 仅从 sit 分支拉取配置
-# - 部署到标准 argocd 命名空间
-# - 管理 SIT 相关的应用定义
+# - 使用 argocd-sit 命名空间实现环境隔离
+# - 生产级RBAC权限配置，遵循最小权限原则
+# - 无初始密码配置，使用ArgoCD随机生成密码
+# - NodePort 30089 端口用于SIT环境访问
 #
-# 🌟 分支隔离优势:
-# - 每个分支自包含完整配置
-# - Git分支实现天然的环境隔离
-# - 标准化的目录结构
+# 🚀 部署命令:
+# kubectl apply -f app-of-apps.yaml
 # ============================================================
 
+# 命名空间
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: argocd-sit
+  labels:
+    environment: sit
+    app.kubernetes.io/name: argocd
+---
+# 生产级集群权限 - 最小必要权限
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: argocd-application-controller-sit
+rules:
+# 核心Kubernetes资源
+- apiGroups: [""]
+  resources: ["*"]
+  verbs: ["*"]
+# 应用相关资源
+- apiGroups: ["apps", "extensions"]
+  resources: ["*"]
+  verbs: ["*"]
+# 网络相关资源
+- apiGroups: ["networking.k8s.io"]
+  resources: ["*"]
+  verbs: ["*"]
+# RBAC资源
+- apiGroups: ["rbac.authorization.k8s.io"]
+  resources: ["*"]
+  verbs: ["*"]
+# 自定义资源
+- apiGroups: ["apiextensions.k8s.io"]
+  resources: ["customresourcedefinitions"]
+  verbs: ["get", "list", "watch"]
+# Traefik CRD (解决K3s Traefik访问问题)
+- apiGroups: ["traefik.io"]
+  resources: ["*"]
+  verbs: ["get", "list", "watch"]
+# 监控相关CRD
+- apiGroups: ["monitoring.coreos.com"]
+  resources: ["*"]
+  verbs: ["*"]
+# ArgoCD相关CRD
+- apiGroups: ["argoproj.io"]
+  resources: ["*"]
+  verbs: ["*"]
+---
+# 集群权限绑定
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: argocd-application-controller-sit
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: argocd-application-controller-sit
+subjects:
+- kind: ServiceAccount
+  name: argocd-application-controller
+  namespace: argocd-sit
+---
+# App of Apps应用 - 管理所有SIT环境应用
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: app-of-apps
+  name: app-of-apps-sit
   namespace: argocd-sit
+  labels:
+    environment: sit
+    app.kubernetes.io/name: app-of-apps
 spec:
   project: default
   source:
     repoURL: https://github.com/1979447992/project-gitops-config.git
-    targetRevision: sit  # Only SIT branch
+    targetRevision: sit
     path: argocd/applications
   destination:
     server: https://kubernetes.default.svc
@@ -37,3 +102,4 @@ spec:
       selfHeal: true
     syncOptions:
       - CreateNamespace=true
+      - ServerSideApply=true
